Archive2/67/eb2ed2bddf1db1/output
main.cpp:15:2: error: no newline at end of file [-Werror,-Wnewline-eof]
}
 ^
1 error generated.
